--- a/src/template.html
+++ b/src/template.html
@@ -4,9 +4,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title><%= htmlWebpackPlugin.options.title %></title>
+  <title>Webpack 5 <%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body>
   <div id="root"></div>
+  <!-- 이것은 주석처리 입니다. -->
 </body>
 </html>
